--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,28 @@ body {
   color: white;
   background-color: cornflowerblue;
 }
+
+/* FOR d3 CHART */
+svg {
+  background-color: white;
+  width: 100%;
+  height: 600px;
+  border: 2px solid #ccc;
+  border-radius: 6px;
+}
+.label {
+  font-family: "Roboto", Roboto, sans-serif;
+  font: "Roboto", sans-serif;
+  pointer-events: none;
+}
+.node {
+  stroke: #000;
+  stroke-width: 1.5px;
+}
+.link {
+  stroke: #999;
+  stroke-width: 1.5px;
+}
+#chart {
+  width: 100%;
+}
