fixed path errors

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   display: none;
 }
 body {
-  background: url(/assets/images/bg_tile.jpg);
+  background: url(https://rommyarb.dev/makalahparser/assets/images/bg_tile.jpg);
   background-repeat: repeat;
 }
 
